Modified z-index of footer to -9998 to avoid glitching

--- a/_sass/_home.sass
+++ b/_sass/_home.sass
@@ -787,11 +787,11 @@ section:last-of-type
 #reveal-footer
   +size(100vw 408px)
   position: relative
-  z-index: -1
+  z-index: -9999
 
 footer
   position: fixed
-  z-index: 0
+  z-index: -9998
   bottom: 0
   width: 100%
   height: 408px
